--- a/style.css
+++ b/style.css
@@ -2,4 +2,7 @@ gfdhghfdhjdo[hj[ofd
 hm;ofjkh;ojfshof;h'
 llmh;fjho;jf'hj'odrh]]
 hfgjhifjhiporj
-kh0fhk0[fkh0[pkfh]]jjfhjfijhijhiojhoijdh
+kh0fhk0[fkh0[pkfh]]jjfhjfijhijhiojhoijdhsgnh;nshns
+nlsnhlnshilnslh
+nglnsingislgnlsngh
+nblsnlnslhn
