--- a/style.css
+++ b/style.css
@@ -5,4 +5,6 @@ hfgjhifjhiporj
 kh0fhk0[fkh0[pkfh]]jjfhjfijhijhiojhoijdhsgnh;nshns
 nlsnhlnshilnslh
 nglnsingislgnlsngh
-nblsnlnslhn
+nblsnlnslhnshshgsgopjsopgjspojgrsjgojfsojgosrjg;sfjg;mfsghps'rjgjmhs
+jgosjho;tjhgiosjg[oisjsijglsjgsjg
+gh;sojgosjhgojhojsojghst'jhiojrmohmfbmsmg'sngsng'a'sahgiavbionaingiangihfhrf]
