--- a/style.css
+++ b/style.css
@@ -8,3 +8,6 @@ nglnsingislgnlsngh
 nblsnlnslhnshshgsgopjsopgjspojgrsjgojfsojgosrjg;sfjg;mfsghps'rjgjmhs
 jgosjho;tjhgiosjg[oisjsijglsjgsjg
 gh;sojgosjhgojhojsojghst'jhiojrmohmfbmsmg'sngsng'a'sahgiavbionaingiangihfhrf]
+gijtoiosrhjgiosehto;hsi;dhgs
+ogjoprjhporjhp;sjhopsjrhoprjs
+osjrhjsrhjosjho;sjrho;s
