--- a/style.css
+++ b/style.css
@@ -11,3 +11,8 @@ gh;sojgosjhgojhojsojghst'jhiojrmohmfbmsmg'sngsng'a'sahgiavbionaingiangihfhrf]
 gijtoiosrhjgiosehto;hsi;dhgs
 ogjoprjhporjhp;sjhopsjrhoprjs
 osjrhjsrhjosjho;sjrho;s
+h,l;fh;xhomxf;thmoxtfmh;oxmho;xmtfhomhomfh;mn;xtmn;fhm;:-ms-fullscreenhm
+fx f mfmhd;m; mf;hm;drtj;dhs;jihisnh'sng'ianglfng'arhig a
+gjlfngpoianinra;ignfagn;airhnign;ang;n;ni jnaeg
+agjagjnahalnhaingh'asnhiahiah
+ anhlanh
