--- a/style.css
+++ b/style.css
@@ -8,3 +8,14 @@ nglnsingislgnlsngh
 nblsnlnslhnshshgsgopjsopgjspojgrsjgojfsojgosrjg;sfjg;mfsghps'rjgjmhs
 jgosjho;tjhgiosjg[oisjsijglsjgsjg
 gh;sojgosjhgojhojsojghst'jhiojrmohmfbmsmg'sngsng'a'sahgiavbionaingiangihfhrf]
+jgios;jgiosjgiojs
+
+
+
+
+
+sjosjhopsjhopjsophjospjgao'g
+gj;ajg;oajgo;jaoghjoa
+okgjpojaopgjo;ajoajhop
+ojkso;jho;sjho;jsho;kjs;hoksohk
+k;osh;osjkh;ojs;ojhtjs
